separate Dockerfile for gpu and cpu images.

--- a/Dockerfile-gpu
+++ b/Dockerfile-gpu
@@ -1,4 +1,6 @@
-FROM ubuntu:16.04
+ARG cuda_version=9.0
+ARG cudnn_version=7
+FROM nvidia/cuda:${cuda_version}-cudnn${cudnn_version}-devel
 
 # Install system packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -43,7 +45,8 @@ RUN conda install -y python=${python_version} && \
     pip install --upgrade pip && \
     pip install \
       sklearn_pandas \
-      tensorflow && \
+      tensorflow-gpu && \
+    pip install https://cntk.ai/PythonWheel/GPU/cntk-2.1-cp36-cp36m-linux_x86_64.whl && \
     conda install \
       bcolz \
       h5py \
@@ -51,10 +54,13 @@ RUN conda install -y python=${python_version} && \
       nose \
       Pillow \
       pandas \
+      pygpu \
       pyyaml \
       six && \
     pip install keras-rl && \
     pip install git+https://github.com/stanfordnmbl/osim-rl.git &&\
+#     git clone git://github.com/keras-team/keras.git /src && pip install -e /src[tests] && \
+#     pip install git+git://github.com/keras-team/keras.git && \
     conda clean -yt
 
 ADD . /src 
